Removed reference to environment variable

--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -52,8 +52,7 @@ jobs:
       run: |
         dir .
         dir .\Release\
-        dir .\${{env.BUILD_TYPE}}
-        .\${{env.BUILD_TYPE}}\test_ismrmrd.exe
+        .\Release\test_ismrmrd.exe
 
 
 
