Added windows boost fix

--- a/utilities/CMakeLists.txt
+++ b/utilities/CMakeLists.txt
@@ -22,6 +22,10 @@ if (HDF5_FOUND)
     install(TARGETS ismrmrd_read_timing_test DESTINATION bin)
 
     find_package(Boost 1.43 COMPONENTS program_options random)
+    if (WIN32)
+        add_definitions(-DBOOST_ALL_NO_LIB)
+        add_definitions(-DBOOST_ALL_DYN_LINK)
+    endif()
     find_package(FFTW3 COMPONENTS single)
 
     if(FFTW3_FOUND AND Boost_FOUND)
