--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ foreach(p
     CMP0046 # CMake 3.0 Error on non-existent dependency in add_dependencies.
     CMP0054 # CMake 3.1 Only interpret ``if()`` arguments as variables or keywords when unquoted.
     CMP0056 # CMake 3.2 Honor link flags in ``try_compile()`` source-file signature.
+    CMP0057 # CMake 3.3 adds support for the new IN_LIST operator
     CMP0058 # CMake 3.3 Ninja requires custom command byproducts to be explicit.
     CMP0074 # CMake 3.12 ``find_package()`` uses ``<PackageName>_ROOT`` variables.
     )
@@ -13,6 +14,25 @@ foreach(p
   endif()
 endforeach()
 project(ISMRMRD)
+
+# use, i.e. don't skip the full RPATH for the build tree
+set(CMAKE_SKIP_BUILD_RPATH FALSE)
+
+# when building, don't use the install RPATH already
+# (but later on when installing)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
+
+set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+
+# add the automatically determined parts of the RPATH
+# which point to directories outside the build tree to the install RPATH
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+
+# the RPATH to be used when installing, but only if it's not a system directory
+list(FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${CMAKE_INSTALL_PREFIX}/lib" isSystemDir)
+if("${isSystemDir}" STREQUAL "-1")
+   set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
+endif("${isSystemDir}" STREQUAL "-1")
 
 # set project specific cmake module path
 set (ISMRMRD_CMAKE_DIR ${PROJECT_SOURCE_DIR}/cmake CACHE PATH
