[CMake] improve HDF5 diagnostic messages
- use message(STATUS ...)
- print HDF5_INCLUDE_DIRS, not HDF5_INCLUDE_DIR

Fixes #112

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,8 +138,8 @@ if (USE_HDF5_DATASET_SUPPORT)
     set(ISMRMRD_DATASET_LIBRARIES ${HDF5_C_LIBRARIES})
     add_definitions(${HDF5_DEFINITIONS})
     include_directories(${HDF5_INCLUDE_DIRS})
-    message("HDF5 found at: ${HDF5_INCLUDE_DIR}")
-    message("HDF5 found at: ${HDF5_C_LIBRARIES}")
+    message(STATUS "HDF5 include found at: ${HDF5_INCLUDE_DIRS}")
+    message(STATUS "HDF5 libs found at: ${HDF5_C_LIBRARIES}")
 
 else ()
     set(ISMRMRD_DATASET_SUPPORT false)
