[CMake] modernisation using target_include_directories etc
Modern CMake recommends use of target_include_directories etc such
that properties are exported on the ISMRMRD::ISMRMRD target.

Changes are backwards compatible. However, I require CMake 3.0 as
it probably needs this.

Fixes #184

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 project(ISMRMRD-C-EXAMPLE)
 
 # if building this example as a standalone project
@@ -7,11 +7,12 @@ if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
 
 # otherwise, building it as part of ISMRMRD itself
 else()
-    set(ISMRMRD_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include")
     set(ISMRMRD_LIBRARIES ismrmrd)
 endif()
 
-include_directories(${ISMRMRD_INCLUDE_DIR})
+# In previous ISMRMRD versions, we needed to use ISMRMRD_INCLUDE_DIR,
+# but this is no longer necessary as the $(ISMRMRD_LIBRARIES} target
+# has this as a property.
 add_executable(ismrmrd_c_example main.c)
 target_link_libraries(ismrmrd_c_example ${ISMRMRD_LIBRARIES})
 install(TARGETS ismrmrd_c_example DESTINATION bin)
