--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -25,6 +25,18 @@ jobs:
     - name: Create Build Environment
       shell: pwsh
       run: cmake -E make_directory ${{github.workspace}}/build
+
+    - name: 'Setup NuGet Credentials'
+      shell: 'bash'
+      # Replace <OWNER> with your organization name
+      run: >
+              vcpkg/vcpkg fetch nuget | tail -n 1
+              sources add
+              -source "https://nuget.pkg.github.com/${GITHUB_REPOSITORY_OWNER}/index.json"
+              -storepasswordincleartext
+              -name "GitHub"
+              -username "${GITHUB_REPOSITORY_OWNER}"
+              -password "${{ secrets.GITHUB_TOKEN }}"
   
     - name: Install dependencies
       shell: pwsh
