--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -30,7 +30,7 @@ jobs:
       shell: 'bash'
       # Replace <OWNER> with your organization name
       run: >
-              vcpkg fetch nuget | tail -n 1
+              `vcpkg fetch nuget | tail -n 1`
               sources add
               -source "https://nuget.pkg.github.com/${GITHUB_REPOSITORY_OWNER}/index.json"
               -storepasswordincleartext
