--- a/.github/workflows/ismrmrd_conda.yml
+++ b/.github/workflows/ismrmrd_conda.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: gadgetron-conda-recipes
-          environment-file: environment.yml
+          environment-file: conda/environment.yml
           python-version: 3.9
           auto-activate-base: false
       - name: Build conda package
