--- a/.github/workflows/ismrmrd_conda.yml
+++ b/.github/workflows/ismrmrd_conda.yml
@@ -13,8 +13,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: gadgetron-conda-recipes
-          environment-file: environment.yml
+          activate-environment: ismrmrd-build
+          environment-file: conda/environment.yml
           python-version: 3.9
           auto-activate-base: false
       - name: Build conda package
@@ -38,7 +38,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: gadgetron-conda-recipes
+          activate-environment: ismrmrd-build
           environment-file: conda/environment.yml
           python-version: 3.9
           auto-activate-base: false
