--- a/.github/workflows/ismrmrd_conda.yml
+++ b/.github/workflows/ismrmrd_conda.yml
@@ -26,6 +26,7 @@ jobs:
         working-directory: conda
         run: |
           ./package.sh
+          echo "Packages built: $(find build_pkg -name ismrmrd*.tar.bz2)"
       - name: Push conda package
         shell: bash -l {0}
         if: ${{ github.event_name == 'push' }}
@@ -33,4 +34,4 @@ jobs:
           ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
         working-directory: conda
         run: |
-          ./publish_package.sh -u ismrmrd -t "$ANACONDA_TOKEN" -p `find conda/build_pkg -name ismrmrd*.tar.bz2`
+          ./publish_package.sh -u ismrmrd -t "$ANACONDA_TOKEN" -p `find build_pkg -name ismrmrd*.tar.bz2`
