Fixed slashes in pipeline

--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -60,7 +60,7 @@ jobs:
       working-directory: ${{github.workspace}}/build
       shell: bash
       run: |
-        cp .\tests\Release\* .\Release\
-        cp .\utilities\Release\* .\utilities\
-        cd .\Release\
-        .\test_ismrmrd.exe
+        cp ./tests/Release/* ./Release/
+        cp ./utilities/Release/* ./utilities/
+        cd ./Release/
+        ./test_ismrmrd.exe
