Add pugixml as a dependency to various environment configurations.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -21,10 +21,12 @@ requirements:
     - git
     - hdf5=1.10.6
     - ninja=1.10.*
+    - pugixml=1.11.4
   run:
     - boost
     - hdf5=1.10.6
     - fftw=3.3.9
+    - pugixml=1.11.4
 
 test:
   requires:
