--- a/environment.yml
+++ b/environment.yml
@@ -22,6 +22,7 @@ dependencies:
   - mkl-include>=2022.0.0
   - ninja=1.10.2
   - numpy=1.22.1
+  - pugixml=1.11.4
   - pyfftw=0.12.0
   - python=3.9
   - scipy=1.7.1
