Remove PugiXML sources from ISMRMRD and configure build to use system library. (#226)
* Add pugixml as a dependency to various environment configurations.

* Adding PugiXML package to CMake and Windows build, and configure build to use system PugiXML.

* Completely remove option to use locally-provided PugiXML, and there was no way to revert to system PugiXML when build RPMs for Fedora. Now - system-provided PugiXML is the only option.

* Increment patch version to note changes.

* Also need to update patch version for vcpkg for Ubuntu conda, CMake, and RPM builds.

--- a/.github/workflows/ismrmrd_build.yml
+++ b/.github/workflows/ismrmrd_build.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get -y install doxygen git-core graphviz libboost-all-dev libfftw3-dev libhdf5-serial-dev libxml2-utils
+        sudo apt-get -y install doxygen git-core graphviz libboost-all-dev libfftw3-dev libhdf5-serial-dev libxml2-utils libpugixml-dev
 
     - name: Configure CMake
       working-directory: ${{github.workspace}}/build
