--- a/.github/workflows/ismrmrd_windows_build.yml
+++ b/.github/workflows/ismrmrd_windows_build.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Install dependencies
       shell: pwsh
       run: |
-        vcpkg install fftw3 boost-test boost-program-options boost-random boost-uuid hdf5
+        vcpkg install fftw3 boost-test boost-program-options boost-random boost-uuid hdf5 pugixml
         vcpkg list
         dir c:\
         dir d:\
