Dockefile for building streaming recon container

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
   "name": "ismrmrd",
   "build": {
-    "dockerfile": "./Dockerfile",
+    "dockerfile": "../Dockerfile",
     "target": "devcontainer",
     "context": ".."
   },
