Initial work on script to test docker images

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -65,6 +65,8 @@
   },
 
   "containerEnv": {
+    "HOST_WORKSPACE_DIR": "${localWorkspaceFolder}", // The host's path to the repo's folder
+    "CONTAINER_WORKSPACE_DIR": "${containerWorkspaceFolder}",
     "DOCKER_BUIKDKIT": "1"
   },
 
