--- a/.github/workflows/ismrmrd_build.yml
+++ b/.github/workflows/ismrmrd_build.yml
@@ -9,6 +9,10 @@ on:
     branches:
       - master
 
+  release:
+    types:
+      - created
+
 env:
   BUILD_TYPE: Release
 
@@ -54,3 +58,17 @@ jobs:
       run: |
         ./docker/build-images.sh
         ./docker/test-docker-images.sh
+
+    - name: Log into registry ${{ env.REGISTRY }}
+      uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Push images
+      if: ${{ github.event_name == 'release' }}
+      working-directory: ${{github.workspace}}
+      shell: bash
+      run: |
+        ./docker/build-images.sh --tag "${GITHUB_REF##*/}" --push
